--- a/public/index.html
+++ b/public/index.html
@@ -28,11 +28,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>MoodFlix - 당신의 기분에 맞는 영화 추천</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    
+    <!-- 카카오 SDK -->
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
